# Lifprojet-

./: README.md  compose.dev.yml  compose.yml  docker-compose.dev.yml  launcher.sh
backend/: .env.example  .gitignore  README.md  app.py  compose.yml  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 1935e0c5f7b8_add_search_field_to_products.py  2cfa9b6647d9_init.py  8ad0f7943106_add_likes_relationship_to_recipe.py
backend/api/: __init__.py  commands.py  config.py  errors.py  extensions.py  models.py  routes.py
backend/api/blueprints/: __init__.py
backend/api/commands/: import_ciqual.py
backend/api/models/: product.py  product_naturel.py  program.py  recipe.py  user.py
backend/api/routes/: __init__.py  auth.py  product.py  product_industrial.py  product_natural.py  recipe.py  upload.py
backend/api/schemas/: product.py  product_natural.py  recipe.py  user.py
backend/app/: cli.py  database.py  main.py
backend/app/middlewares/: auth.py
backend/app/models/: __init__.py  product.py  recipe.py  user.py
backend/app/routes/: auth.py  product.py  recipe.py  upload.py
backend/app/schemas/: product.py  recipe.py  user.py
backend/app/services/: recipe.py  user.py
backend/app/utils/: password.py  recipe.py  session.py
backend/examples/: product.http  recipe.http
backend/migrations/versions/: 0d8c3f1286d2_add_recipe_table.py  29d198c1426a_initial_migration.py  (+4 more)
backendv2/: .env  .env.example  .gitignore  README.md  compose.yml  pyproject.toml
backendv2/app/: cli.py  database.py  main.py
frontend/: README.md  (+4 more)
(+116 files in other folders)
