[project]
name = "lifprojet-backend"
version = "0.1.0"
description = "API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "flasgger==0.9.7b2",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-marshmallow==1.3.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "marshmallow-sqlalchemy==1.4.1",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "webargs==8.6.0",
    "werkzeug==3.1.3",
    "xlrd==2.0.1",
]
