[project]
name = "backendv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.2",
    "bcrypt==4.3.0",
    "fastapi[all]==0.115.12",
    "itsdangerous==2.2.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.40",
]
